--- a/public/yingmeng/index.html
+++ b/public/yingmeng/index.html
@@ -18,7 +18,7 @@
 	<div class="content">
         <img src="./index_r2_c1.jpg">
         <a href="http://detail.koudaitong.com/show/goods?alias=uz6p6kmi&reft=1445595421393&spm=h1205019"><img src="./index_r3_c1.jpg"></a>
-        <embed src="http://player.youku.com/player.php/sid/XODIwNDU0NzA0/v.swf" allowFullScreen="true" quality="high" width="100%" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+        <iframe height=400 width=100% src="http://player.youku.com/embed/XODIwNDU0NzA0" frameborder=0 allowfullscreen></iframe>
         <img src="./index_r5_c1.jpg">
         <img src="./index_r6_c1.jpg">
         <img src="./index_r7_c1.jpg">
@@ -42,3 +42,6 @@ document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3
 </script>
 </div>
 </html>
+
+
+
